--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -15,13 +15,13 @@
                 </div>
             </a>
             <a class="w-full" href="#">
-                <div class="h-28 rounded-md bg-[#302E2E]/20 flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
+                <div class="h-28 rounded-md bg-[#302E2E]/20 flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
                     <h2 class="font-semibold text-3xl">Weekly</h2>
                     <img class="w-16 h-16" src="../static/images/enojado.png">
                 </div>
             </a>
             <a class="w-full" href="/admin">
-                <div class="h-28 bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
+                <div class="h-28 bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                     <h2 class="font-semibold text-3xl">Admin portal</h2>
                     <img class="w-16 h-16" src="../static/images/administracion.png">
                 </div>
